login&signup page js

--- a/final/index.html
+++ b/final/index.html
@@ -11,8 +11,8 @@
 <body>
     <header class="mainHeader">
         <div id="headermp" class="headerMenu">My Page</div>
-        <div><a href="./signUp.html"  class="headerMenu">Sign Up</a></div>
-        <div><a href="./login.html"  class="headerMenu">Login</a></div>
+        <div id="headerSignUp" class="headerMenu">Sign Up</div>
+        <div id="headerLogin" class="headerMenu">Login</div>
     </header>
     <section>
         <div class="container">
