--- a/final/login.html
+++ b/final/login.html
@@ -13,10 +13,15 @@
         <p> Please enter your Email ID and password</p>
     </div>
     <div class="loginBoard">
-        <input type="email" name="" class="loginInput" placeholder="Enter Your Email.">
-        <input type="password" name="" class="loginInput" placeholder="Enter Your password.">
-        <button class="signIn">Login</button>
+        <input id="emailLogin" type="email" name="" class="loginInput" placeholder="Enter Your Email.">
+        <div id="alertLoginEmail" class="alertMSG"></div>
+        <input id="pwLogin" type="password" name="" class="loginInput" placeholder="Enter Your password.">
+        <div id="alertLoginPW" class="alertMSG"></div>
+        <button id="btnSubmitLogin" class="signIn">Login</button>
         <table class="loginTable"><tr><td>First visit? </td><td><a href="./signUp.html">Sign Up</a></td></tr></table>
+        <div id="alertLogin" class="alertMSG"></div>
     </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="js/final.js" type="text/javascript"></script>
 </body>
 </html>
