--- a/final/signUp.html
+++ b/final/signUp.html
@@ -11,10 +11,13 @@
         <h2> Welcome to the</h2>
         <h1> SKKU <span style="color: black;">ConcertHall</span> </h1>
     </div>
-    <div class="loginBoard">
-        <input type="email" name="" class="signInput" placeholder="Enter Your Email.">
-        <input type="password" name="" class="signInput" placeholder="Enter Your password.">
-        <input type="password" name="" class="signInput" placeholder="Confirm Your password.">
+    <div id="loginBoard" class="loginBoard">
+        <input id="inputSignUpEmail" type="email" name="" class="signInput" placeholder="Enter Your Email.">
+        <div id="alertEmail" class="alertMSG"></div>
+        <input id="inputSignUpPW" type="password" name="" class="signInput" placeholder="Enter Your password.">
+        <div id="alertPW" class="alertMSG"></div>
+        <input id="inputSignUpPW2" type="password" name="" class="signInput" placeholder="Confirm Your password.">
+        <div id="alertPW2" class="alertMSG"></div>
 
         <div id="genderInput" class="radioDiv">
             <input id="maleRadio" class="genderRadio" name="gender" type="radio" value="male">
@@ -22,20 +25,34 @@
             <input class="genderRadio" id="femaleRadio" name="gender" type="radio" value="female">
             <label for="femaleRadio">Female</label>
         </div>
+        <div id="alertGender" class="alertMSG"></div>
 
 
-        <input type="text" name="" class="signInput" placeholder="Enter Your First Name.">
-        <input type="text" name="" class="signInput" placeholder="Enter Your Last Name."z>
-
+        <input id="inputSignUpFirst" type="text" name="" class="signInput" placeholder="Enter Your First Name.">
+        <div id="alertFirst" class="alertMSG"></div>
+        <input id="inputSignUpLast" type="text" name="" class="signInput" placeholder="Enter Your Last Name."z>
+        <div id="alertLast" class="alertMSG"></div>
+        <input id="inputSignUpAge" type="date" name="" class="signInput" placeholder="Enter Your Birthday."z>
+        <div id="alertAge" class="alertMSG"></div>
+        <input id="inputSignUpPhone" type="tel" name="" class="signInput" placeholder="Enter Your Phone Number."z>
+        <div id="alertPhone" class="alertMSG"></div>
         <hr class="divideLine">
 
         <div class="agreeTermDiv">
-            <input class="agreeTerm" type="checkbox" id="agreeTerm">
+            <input class="agreeTerm" name="agreeTerm" type="checkbox" id="agreeTerm">
             <label for="agreeTerm">Agree term</label>
         </div>
+        <div id="alertTerm" class="alertMSG"></div>
         <br>
         <table class="loginTable"><tr><td>Detail for</td><td><a href="./signUp.html">Term</a></td></tr></table>
-        <button class="signIn">Sign Up</button>
+        <button id="btnSubmitSignUp" class="signIn">Sign Up</button>
+        <div id="alertSubmit" class="alertMSG"></div>
     </div>
+    <div id="registeredMSG" style="display: none;">
+        <h1>You are registered! Please <a href="./login.html">login!</a></h1>
+
+    </div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+<script src="js/final.js" type="text/javascript"></script>
 </body>
 </html>
