--- a/final/index.html
+++ b/final/index.html
@@ -32,35 +32,88 @@
     <section class="main-section" id="main_section">
         <div class="container">
             <div class="mainBoard">
-                <div class="product">
-                    <div class="thumbnailMain" style="background-image: url(./img/pst_1025.jpg);"></div>
+                <div id="product0" class="product" style="display: none;">
+                    <div id="thumbnailMain0" class="thumbnailMain" style="background-image: url(./img/pst_1025.jpg);"></div>
                     <div class="infoMain">
-                            <aside><button class="ticketBtn" id="ticketBtn">Buy Ticket</button></aside>
+                            <aside><button class="ticketBtn" id="ticketBtn0">Buy Ticket</button></aside>
                         <div class="infoTitle">
                             <h3><span>[Location]</span> title</h3>
                         </div>
                         <table>
                             <tr>
                                 <td class="attribute">GENRE</td>
-                                <td class="">: Musical</td>
+                                <td id="genre0" class="">: Musical</td>
                             </tr>
                             <tr>
                                 <td class="attribute">VENUE</td>
-                                <td class="">: SKKU engineering building</td>
+                                <td id="venue0" class="">: SKKU engineering building</td>
                             </tr>
                             <tr>
                                 <td class="attribute">DATE</td>
-                                <td class="">: 2023.12.19 ~ 2024.02.25</td>
+                                <td id="date0" class="">: 2023.12.19 ~ 2024.02.25</td>
                             </tr>
                             <tr>
                                 <td class="attribute">PRICE</td>
-                                <td class="">: VIP 160,000KRW | R 130,000KRW | S 100,000KRW | A 50,000KRW</td>
+                                <td id="price0" class="">: VIP 160,000KRW | R 130,000KRW | S 100,000KRW | A 50,000KRW</td>
                             </tr>
                         </table>
     
                     </div>
                 </div>
-                <div class="product">1</div>
+                <div id="product1" class="product" style="display: none;">
+                    <div id="thumbnailMain1" class="thumbnailMain" style="background-image: url(./img/pst_1025.jpg);"></div>
+                    <div class="infoMain">
+                            <aside><button class="ticketBtn" id="ticketBtn1">Buy Ticket</button></aside>
+                        <div class="infoTitle">
+                            <h3><span>[Location]</span> title</h3>
+                        </div>
+                        <table>
+                            <tr>
+                                <td class="attribute">GENRE</td>
+                                <td id="genre1" class="">: Musical</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">VENUE</td>
+                                <td id="venue1" class="">: SKKU engineering building</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">DATE</td>
+                                <td id="date1" class="">: 2023.12.19 ~ 2024.02.25</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">PRICE</td>
+                                <td id="price1" class="">: VIP 160,000KRW | R 130,000KRW | S 100,000KRW | A 50,000KRW</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div id="product2" class="product" style="display: none;">
+                    <div id="thumbnailMain2" class="thumbnailMain" style="background-image: url(./img/pst_1025.jpg);"></div>
+                    <div class="infoMain">
+                            <aside><button class="ticketBtn" id="ticketBtn2">Buy Ticket</button></aside>
+                        <div class="infoTitle">
+                            <h3><span>[Location]</span> title</h3>
+                        </div>
+                        <table>
+                            <tr>
+                                <td class="attribute">GENRE</td>
+                                <td id="genre2" class="">: Musical</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">VENUE</td>
+                                <td id="venue2" class="">: SKKU engineering building</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">DATE</td>
+                                <td id="date2" class="">: 2023.12.19 ~ 2024.02.25</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">PRICE</td>
+                                <td id="price2" class="">: VIP 160,000KRW | R 130,000KRW | S 100,000KRW | A 50,000KRW</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
