--- a/final/index.html
+++ b/final/index.html
@@ -13,13 +13,14 @@
         <div id="headermp" class="headerMenu">My Page</div>
         <div id="headerSignUp" class="headerMenu">Sign Up</div>
         <div id="headerLogin" class="headerMenu">Login</div>
+        <div id="userName"></div>
     </header>
     <section>
         <div class="container">
             <div class="subject" style="background-image: url(./img/skku_s.png);" id="subject"><h1><span class="skku">SKKU</span> ConcertHall</h1></div>
             <br>
             <div class="navBase">
-                <div class="navBar" style="background-image: url(./img/icon_image.png);">
+                <div class="navBar" style="background-image: url(./img/header.png);">
                     <button class="navBtn" id="homeBtn">Home</button>
                     <button class="navBtn" id="concertBtn">Concert</button>
                     <button class="navBtn" id="musicalBtn">Musical</button>
@@ -164,6 +165,33 @@
                             <tr>
                                 <td class="attribute">PRICE</td>
                                 <td id="price4" class="">: VIP 160,000KRW | R 130,000KRW | S 100,000KRW | A 50,000KRW</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div id="product5" class="product" style="display: none;">
+                    <div id="thumbnailMain5" class="thumbnailMain" style="background-image: url(./img/pst_1025.jpg);"></div>
+                    <div class="infoMain">
+                            <aside><button class="ticketBtn" id="ticketBtn2">Buy Ticket</button></aside>
+                        <div class="infoTitle">
+                            <h3><span id="title6">[Location]</span> </h3>
+                        </div>
+                        <table>
+                            <tr>
+                                <td class="attribute">GENRE</td>
+                                <td id="genre5" class="">: Musical</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">VENUE</td>
+                                <td id="venue5" class="">: SKKU engineering building</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">DATE</td>
+                                <td id="date5" class="">: 2023.12.19 ~ 2024.02.25</td>
+                            </tr>
+                            <tr>
+                                <td class="attribute">PRICE</td>
+                                <td id="price5" class="">: VIP 160,000KRW | R 130,000KRW | S 100,000KRW | A 50,000KRW</td>
                             </tr>
                         </table>
                     </div>
